fix list view post overlapping with #list-tags

--- a/assets/css/layout/_default/list.css
+++ b/assets/css/layout/_default/list.css
@@ -84,7 +84,7 @@ hr.ldots::after {
     align-items: baseline;
 }
 
-.list-year.textwidth {
+.list-year.descending {
     margin-left: auto;
 }
 
